--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -33,7 +33,7 @@
 .input-item {
   border-radius: 12px;
   height: 44px;
-  width: 50%;
+  width: 45%;
 }
 
 .searchclaro {
@@ -279,5 +279,14 @@ ion-card-title {
 
   .custom-swiper .swiper-pagination-bullet-active {
     opacity: 1;
+  }
+}
+
+.search-button{
+  --background: #e67e22;
+  ion-icon {
+    font-size: 20px;
+    color: #ffffff;
+    transition: transform 0.2s ease;
   }
 }
