--- a/src/app/crearproductopopover/crearproductopopover.component.html
+++ b/src/app/crearproductopopover/crearproductopopover.component.html
@@ -45,8 +45,8 @@
       <ion-row>
         <ion-col>
           <ion-item lines="none">
-            <ion-label position="floating">Descuento Aplicado</ion-label>
-            <ion-input [(ngModel)]="producto.discount"></ion-input>
+            <ion-label position="floating">Empresa</ion-label>
+            <ion-input [(ngModel)]="producto.empresa"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
