Te saca tu nombre al lado del bienvenido

--- a/src/app/paneladmin/paneladmin.component.html
+++ b/src/app/paneladmin/paneladmin.component.html
@@ -8,7 +8,7 @@
   <div class="branding">
     <img src="assets/indexer.png" alt="Logo" />
     <h1 [class.claro]="modo" [class.oscuro]="!modo">Panel Admin</h1>
-    <p [class.claro]="modo" [class.oscuro]="!modo">Bienvenido {{ perfil?.nombre }}</p>
+    <p [class.claro]="modo" [class.oscuro]="!modo">Bienvenido {{ miperfil?.nombre }}</p>
   </div>
 
   <div class="searchbar-container">
