--- a/src/app/paneladmin/paneladmin.component.scss
+++ b/src/app/paneladmin/paneladmin.component.scss
@@ -126,7 +126,7 @@ ion-button {
 
   img {
     height: 180px;
-    object-fit: contain;
+    object-fit: cover;
     margin: 30px auto 0;
     display: block;
     border-radius: 8px;
