Alertas empresas disponibles hecho

--- a/src/app/crearalertapopover/crearalertapopover.component.scss
+++ b/src/app/crearalertapopover/crearalertapopover.component.scss
@@ -74,3 +74,12 @@ ion-input{
   color: #bfbfbf;
 }
 
+ion-select {
+  margin-top: 10px;
+  height: 32px;
+  --padding-start: 8px;
+  --placeholder-color: #6e6e6e;
+  --color: #4d4d4d;
+}
+
+
