--- a/src/app/crearalertapopover/crearalertapopover.component.html
+++ b/src/app/crearalertapopover/crearalertapopover.component.html
@@ -35,6 +35,28 @@
         </ion-col>
       </ion-row>
 
+      <ion-row>
+        <ion-col>
+          <ion-item lines="none" class="select-item">
+            <ion-label position="floating">Selecciona empresa(s)</ion-label>
+            <ion-select [(ngModel)]="alerta.empresas" multiple="true" interface="popover" placeholder="Elige una o varias" class="custom-select">
+
+              <ion-select-option value="Amazon">Amazon</ion-select-option>
+              <ion-select-option value="eBay">eBay</ion-select-option>
+              <ion-select-option value="Aliexpress">Aliexpress</ion-select-option>
+              <ion-select-option value="PcComponentes">PcComponentes</ion-select-option>
+              <ion-select-option value="MediaMarkt">MediaMarkt</ion-select-option>
+              <ion-select-option value="Carrefour">Carrefour</ion-select-option>
+              <ion-select-option value="El Corte Inglés">El Corte Inglés</ion-select-option>
+
+            </ion-select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+
+
+
       <!-- Botón -->
       <ion-row>
         <ion-col class="ion-text-center">
